--- a/.github/workflows/build-zed.yml
+++ b/.github/workflows/build-zed.yml
@@ -19,6 +19,7 @@ jobs:
 
     - name: Build Zed Editor
       run: |
+        New-ItemProperty -Path "HKLM:\SYSTEM\CurrentControlSet\Control\FileSystem" ` -Name "LongPathsEnabled" -Value 1 -PropertyType DWORD -Force
         cd zed
         cargo build --release
 
